// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav renders the Account side nav 1`] = `
<div
  class="css-c1dtfw side-nav"
  data-testid="side-nav"
>
  <nav
    role="navigation"
  >
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-home"
      href="/home?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.671 1.442a2.004 2.004 0 0 1 2.658 0l8 7.09c.427.378.671.92.671 1.49v9.922a1.997 1.997 0 0 1-2 1.994h-3c-1.105 0-2-.893-2-1.994v-4.985c0-.275-.175-1.072-.689-1.789-.48-.67-1.201-1.203-2.311-1.203s-1.831.533-2.311 1.203C9.175 13.887 9 14.684 9 14.96v4.986a1.996 1.996 0 0 1-2 1.993H4c-1.105 0-2-.893-2-1.994v-9.922c0-.57.244-1.112.671-1.49zM12 2.932l-8 7.09v9.922h3v-4.985c0-.723.325-1.92 1.061-2.948.77-1.074 2.049-2.038 3.939-2.038s3.169.963 3.939 2.038C16.675 13.039 17 14.236 17 14.959v4.985h3v-9.922zM7.002 19.944H7zm0 0"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:home
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-saves"
      href="/saves?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon inactive"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2H2m2 0H2v6c0 5.523 4.477 10 10 10s10-4.477 10-10V5h-2v6a8 8 0 1 1-16 0z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7.293 9.293a1 1 0 0 1 1.414 0L12 12.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="css-1bptydr icon side-nav-icon active"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 21c5.523 0 10-4.477 10-10V5a2 2 0 0 0-2-2H4c-1.105 0-2 .893-2 1.998V11c0 5.523 4.477 10 10 10M8.707 9.293a1 1 0 0 0-1.414 1.414l4 4a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L12 12.586z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      nav:saves
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-discover"
      href="/explore?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.422 6.122a1 1 0 0 0-1.3 1.3l2.828 7.07a1 1 0 0 0 .557.558l7.071 2.828a1 1 0 0 0 1.3-1.3l-2.828-7.07a1 1 0 0 0-.557-.558zm3.226 7.23 4.507 1.803-1.803-4.507z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18m0 2c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:discover
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-collections"
      href="/collections?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.052 2.13h-2.59c-.921 0-1.667.896-1.667 2v12q0 .307.073.587l-.023.09c-.32 1.269.215 2.579 1.239 3.298-1.663-.225-2.956-1.919-2.956-3.975v-12c0-2.209 1.492-4 3.333-4h8.334c1.606 0 2.948 1.365 3.263 3.18l-2.087-.596c-.3-.36-.717-.584-1.176-.584h-.865l-2.146-.614a2.89 2.89 0 0 0-2.732.614"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="m9.94 19.75-2.934.786c-.889.239-1.841-.433-2.127-1.5L1.773 7.445c-.286-1.067.203-2.125 1.092-2.363l2.263-.607V3.13c0-.271.054-.53.152-.766l-2.932.786C.57 3.626-.41 5.742.163 7.876L3.27 19.467c.572 2.134 2.477 3.478 4.255 3.001l6.278-1.682zm2.115-18.703a2.9 2.9 0 0 0-1.658-.054l-.512.137h1.994q.086-.044.176-.083"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="m20.386 5.382-7.66-2.444c-.847-.27-1.779.388-2.083 1.47L7.342 16.17c-.304 1.083.136 2.179.982 2.449l7.66 2.444c.846.27 1.778-.388 2.082-1.47L21.368 7.83c.303-1.083-.136-2.179-.982-2.449zM13.276.978c-1.692-.54-3.557.777-4.165 2.942L5.81 15.68c-.608 2.165.271 4.358 1.963 4.898l7.66 2.444c1.693.54 3.557-.777 4.165-2.942L22.9 8.32c.607-2.165-.272-4.358-1.964-4.898z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M11.625 6.858c.152-.541.618-.87 1.041-.736l6.128 1.956c.423.135.643.683.491 1.224s-.618.87-1.04.736l-6.129-1.956c-.423-.135-.643-.683-.49-1.224zm-1.1 3.92c.152-.541.618-.87 1.04-.736l6.129 1.956c.423.135.643.683.49 1.224-.151.541-.617.87-1.04.736l-6.128-1.956c-.424-.135-.643-.683-.491-1.224m-1.101 3.92c.152-.541.618-.87 1.041-.736l3.064.978c.423.135.643.683.491 1.225-.152.54-.618.87-1.04.735l-3.065-.978c-.423-.135-.643-.683-.49-1.224z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:collections
    </a>
    <div
      class="css-s9w2pk"
      data-testid="side-nav-account"
    />
  </nav>
  <div
    class="bottom-nav"
  >
    <button
      aria-label="nav:return-to-top"
      class="hidden"
      data-testid="side-nav-scroll-to-top"
    >
      <span
        class="css-1bptydr icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M19.707 14.707a1 1 0 0 1-1.414 0L12 8.414l-6.293 6.293a1 1 0 0 1-1.414-1.414l7-7a1 1 0 0 1 1.414 0l7 7a1 1 0 0 1 0 1.414"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`SideNav renders the Saves side nav and shows tags 1`] = `
<div
  class="css-c1dtfw side-nav"
  data-testid="side-nav"
>
  <nav
    role="navigation"
  >
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-home"
      href="/home?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.671 1.442a2.004 2.004 0 0 1 2.658 0l8 7.09c.427.378.671.92.671 1.49v9.922a1.997 1.997 0 0 1-2 1.994h-3c-1.105 0-2-.893-2-1.994v-4.985c0-.275-.175-1.072-.689-1.789-.48-.67-1.201-1.203-2.311-1.203s-1.831.533-2.311 1.203C9.175 13.887 9 14.684 9 14.96v4.986a1.996 1.996 0 0 1-2 1.993H4c-1.105 0-2-.893-2-1.994v-9.922c0-.57.244-1.112.671-1.49zM12 2.932l-8 7.09v9.922h3v-4.985c0-.723.325-1.92 1.061-2.948.77-1.074 2.049-2.038 3.939-2.038s3.169.963 3.939 2.038C16.675 13.039 17 14.236 17 14.959v4.985h3v-9.922zM7.002 19.944H7zm0 0"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:home
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-saves"
      href="/saves?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon inactive"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2H2m2 0H2v6c0 5.523 4.477 10 10 10s10-4.477 10-10V5h-2v6a8 8 0 1 1-16 0z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7.293 9.293a1 1 0 0 1 1.414 0L12 12.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="css-1bptydr icon side-nav-icon active"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 21c5.523 0 10-4.477 10-10V5a2 2 0 0 0-2-2H4c-1.105 0-2 .893-2 1.998V11c0 5.523 4.477 10 10 10M8.707 9.293a1 1 0 0 0-1.414 1.414l4 4a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L12 12.586z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      nav:saves
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-discover"
      href="/explore?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.422 6.122a1 1 0 0 0-1.3 1.3l2.828 7.07a1 1 0 0 0 .557.558l7.071 2.828a1 1 0 0 0 1.3-1.3l-2.828-7.07a1 1 0 0 0-.557-.558zm3.226 7.23 4.507 1.803-1.803-4.507z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18m0 2c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:discover
    </a>
    <a
      class="css-gcpn2c  "
      data-testid="side-nav-collections"
      href="/collections?src=sidebar"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.052 2.13h-2.59c-.921 0-1.667.896-1.667 2v12q0 .307.073.587l-.023.09c-.32 1.269.215 2.579 1.239 3.298-1.663-.225-2.956-1.919-2.956-3.975v-12c0-2.209 1.492-4 3.333-4h8.334c1.606 0 2.948 1.365 3.263 3.18l-2.087-.596c-.3-.36-.717-.584-1.176-.584h-.865l-2.146-.614a2.89 2.89 0 0 0-2.732.614"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="m9.94 19.75-2.934.786c-.889.239-1.841-.433-2.127-1.5L1.773 7.445c-.286-1.067.203-2.125 1.092-2.363l2.263-.607V3.13c0-.271.054-.53.152-.766l-2.932.786C.57 3.626-.41 5.742.163 7.876L3.27 19.467c.572 2.134 2.477 3.478 4.255 3.001l6.278-1.682zm2.115-18.703a2.9 2.9 0 0 0-1.658-.054l-.512.137h1.994q.086-.044.176-.083"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="m20.386 5.382-7.66-2.444c-.847-.27-1.779.388-2.083 1.47L7.342 16.17c-.304 1.083.136 2.179.982 2.449l7.66 2.444c.846.27 1.778-.388 2.082-1.47L21.368 7.83c.303-1.083-.136-2.179-.982-2.449zM13.276.978c-1.692-.54-3.557.777-4.165 2.942L5.81 15.68c-.608 2.165.271 4.358 1.963 4.898l7.66 2.444c1.693.54 3.557-.777 4.165-2.942L22.9 8.32c.607-2.165-.272-4.358-1.964-4.898z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M11.625 6.858c.152-.541.618-.87 1.041-.736l6.128 1.956c.423.135.643.683.491 1.224s-.618.87-1.04.736l-6.129-1.956c-.423-.135-.643-.683-.49-1.224zm-1.1 3.92c.152-.541.618-.87 1.04-.736l6.129 1.956c.423.135.643.683.49 1.224-.151.541-.617.87-1.04.736l-6.128-1.956c-.424-.135-.643-.683-.491-1.224m-1.101 3.92c.152-.541.618-.87 1.041-.736l3.064.978c.423.135.643.683.491 1.225-.152.54-.618.87-1.04.735l-3.065-.978c-.423-.135-.643-.683-.49-1.224z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:collections
    </a>
    <div
      class="css-1nwm6l7"
    >
      <h4
        class="css-s9w2pk"
      >
        nav:lists
      </h4>
      <button
        class="css-rpqv52"
        data-testid="side-nav-create-list"
      >
        <span
          class="icon css-19mp698"
          data-tooltip="nav:create-list"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 3a1 1 0 0 1 1 1v7h7a1 1 0 1 1 0 2h-7v7a1 1 0 1 1-2 0v-7H4a1 1 0 1 1 0-2h7V4a1 1 0 0 1 1-1"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-all-lists"
    >
      <span
        class="css-1bptydr icon side-nav-icon inactive"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 21q-.825 0-1.413-.587Q3 19.825 3 19V5q0-.825.587-1.413Q4.175 3 5 3h14q.825 0 1.413.587Q21 4.175 21 5v14q0 .825-.587 1.413Q19.825 21 19 21Zm0-2h14V5H5zm3-2q.425 0 .713-.288Q9 16.425 9 16t-.287-.713T8 15t-.713.287Q7 15.575 7 16t.287.712Q7.575 17 8 17m0-4q.425 0 .713-.288Q9 12.425 9 12t-.287-.713T8 11t-.713.287Q7 11.575 7 12t.287.712Q7.575 13 8 13m0-4q.425 0 .713-.288Q9 8.425 9 8t-.287-.713Q8.425 7 8 7t-.713.287Q7 7.575 7 8t.287.712Q7.575 9 8 9m4 8h4q.425 0 .712-.288Q17 16.425 17 16t-.288-.713Q16.425 15 16 15h-4q-.425 0-.712.287Q11 15.575 11 16t.288.712T12 17m0-4h4q.425 0 .712-.288Q17 12.425 17 12t-.288-.713Q16.425 11 16 11h-4q-.425 0-.712.287Q11 11.575 11 12t.288.712T12 13m0-4h4q.425 0 .712-.288Q17 8.425 17 8t-.288-.713Q16.425 7 16 7h-4q-.425 0-.712.287Q11 7.575 11 8t.288.712Q11.575 9 12 9M5 19V5z"
          />
        </svg>
      </span>
      <span
        class="css-1bptydr icon side-nav-icon active"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 21q-.825 0-1.413-.587Q3 19.825 3 19V5q0-.825.587-1.413Q4.175 3 5 3h14q.825 0 1.413.587Q21 4.175 21 5v14q0 .825-.587 1.413Q19.825 21 19 21Zm3-4q.425 0 .713-.288Q9 16.425 9 16t-.287-.713T8 15t-.713.287Q7 15.575 7 16t.287.712Q7.575 17 8 17m0-4q.425 0 .713-.288Q9 12.425 9 12t-.287-.713T8 11t-.713.287Q7 11.575 7 12t.287.712Q7.575 13 8 13m0-4q.425 0 .713-.288Q9 8.425 9 8t-.287-.713Q8.425 7 8 7t-.713.287Q7 7.575 7 8t.287.712Q7.575 9 8 9m4 8h4q.425 0 .712-.288Q17 16.425 17 16t-.288-.713Q16.425 15 16 15h-4q-.425 0-.712.287Q11 15.575 11 16t.288.712T12 17m0-4h4q.425 0 .712-.288Q17 12.425 17 12t-.288-.713Q16.425 11 16 11h-4q-.425 0-.712.287Q11 11.575 11 12t.288.712T12 13m0-4h4q.425 0 .712-.288Q17 8.425 17 8t-.288-.713Q16.425 7 16 7h-4q-.425 0-.712.287Q11 7.575 11 8t.288.712Q11.575 9 12 9"
          />
        </svg>
      </span>
      nav:all-lists
    </button>
    <h4
      class="css-s9w2pk"
    >
      nav:filters
    </h4>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-archive"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M1 4a2 2 0 0 1 2-2h18a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2zm2 0v2h18V4z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M3 8a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4zm2 10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8H5z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M15.707 11.293a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 1 1 1.414-1.414L11 14.586l3.293-3.293a1 1 0 0 1 1.414 0"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:archive
    </button>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-favorites"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 1a1 1 0 0 1 .897.557l2.706 5.484 6.051.88a1 1 0 0 1 .555 1.705l-4.38 4.268 1.034 6.027a1 1 0 0 1-1.45 1.054L12 18.13l-5.413 2.845a1 1 0 0 1-1.45-1.054l1.033-6.027-4.379-4.268a1 1 0 0 1 .555-1.706l6.051-.88 2.706-5.483A1 1 0 0 1 12 1m0 3.26L9.958 8.397a1 1 0 0 1-.753.548l-4.567.663 3.305 3.221a1 1 0 0 1 .287.885l-.78 4.548 4.085-2.147a1 1 0 0 1 .93 0l4.085 2.147-.78-4.548a1 1 0 0 1 .287-.885l3.305-3.22-4.567-.664a1 1 0 0 1-.753-.548z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:favorites
    </button>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-highlights"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.512 8.546a3 3 0 0 0-.51 4.195l-.724.723a3 3 0 0 0-.586 3.415L1.18 19.391a1 1 0 0 0 .39 1.656l4.243 1.414a1 1 0 0 0 1.023-.241l1.098-1.098a3 3 0 0 0 3.415-.586l.746-.746a3 3 0 0 0 4.133-.77l6.406-9.15a3 3 0 0 0-.337-3.842l-4.112-4.112a3 3 0 0 0-3.98-.233zm9.932-5.294-8.693 6.863a1 1 0 0 0-.087 1.492l6.4 6.4a1 1 0 0 0 1.526-.134l6.405-9.15a1 1 0 0 0-.112-1.28L16.771 3.33a1 1 0 0 0-1.327-.078M6.4 14.172l-.707.707a1 1 0 0 0 0 1.414l2.829 2.828a1 1 0 0 0 1.414 0l.707-.707z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:highlights
    </button>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-articles"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 4H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2M7 2a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h10a4 4 0 0 0 4-4V6a4 4 0 0 0-4-4z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M7 8a1 1 0 0 1 1-1h8a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1M7 12a1 1 0 0 1 1-1h8a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1M7 16a1 1 0 0 1 1-1h4a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1"
            fill-rule="evenodd"
          />
        </svg>
      </span>
       
      nav:articles
    </button>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-videos"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M9 14.461V9.54a1 1 0 0 1 1.406-.914l5.538 2.461c.792.352.792 1.476 0 1.828l-5.538 2.461A1 1 0 0 1 9 14.461"
            fill="currentColor"
          />
        </svg>
      </span>
       
      nav:videos
    </button>
    <h4
      class="css-s9w2pk"
    >
      nav:tags
    </h4>
    <button
      class="css-gcpn2c  "
      data-testid="side-nav-all-tags"
    >
      <span
        class="css-1bptydr icon side-nav-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 1.414.586L20 11.172a4 4 0 0 1 0 5.656L16.828 20a4 4 0 0 1-5.656 0l-8.586-8.586A2 2 0 0 1 2 10zm8 0 8.586 8.586a2 2 0 0 1 0 2.828l-3.172 3.172a2 2 0 0 1-2.828 0L4 10V4z"
            fill-rule="evenodd"
          />
          <path
            d="M9 7.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"
          />
        </svg>
      </span>
       
      nav:all-tags
    </button>
    <button
      class="css-gcpn2c  tag-class"
      data-testid="side-nav-tags-home"
    >
      home
    </button>
    <button
      class="css-gcpn2c  tag-class"
      data-testid="side-nav-tags-space"
    >
      space
    </button>
  </nav>
  <div
    class="bottom-nav"
  >
    <button
      aria-label="nav:return-to-top"
      class="hidden"
      data-testid="side-nav-scroll-to-top"
    >
      <span
        class="css-1bptydr icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M19.707 14.707a1 1 0 0 1-1.414 0L12 8.414l-6.293 6.293a1 1 0 0 1-1.414-1.414l7-7a1 1 0 0 1 1.414 0l7 7a1 1 0 0 1 0 1.414"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
